third_party/move/move-compiler-v2/tests/bytecode-generator/fields_invalid.exp
// -- Model dump before first bytecode pipeline
module 0x42::fields {
    struct T {
        h: u64,
    }
    struct S {
        f: u64,
        g: T,
    }
    private fun write_ref(x: &S) {
        select fields::T.h<T>(select fields::S.g<&S>(x)) = 42;
        Tuple()
    }
} // end 0x42::fields

// -- Sourcified model before first bytecode pipeline
module 0x42::fields {
    struct T {
        h: u64,
    }
    struct S {
        f: u64,
        g: T,
    }
    fun write_ref(x: &S) {
        x.g.h = 42;
    }
}


Diagnostics:
error: expected `&mut` but found `&S`
   ┌─ tests/bytecode-generator/fields_invalid.move:13:9
   │
13 │         x.g.h = 42;
   │         ^
