third_party/move/move-compiler-v2/tests/bytecode-generator/fields_invalid.move
module 0x42::fields {

    struct S {
        f: u64,
        g: T
    }

    struct T {
        h: u64
    }

    fun write_ref(x: &S) {
        x.g.h = 42;
    }
}
